css fix for collapsable menu

--- a/static/css/device.css
+++ b/static/css/device.css
@@ -1,6 +1,6 @@
 #map {
   height: 350px;
-  width: 350px;
+  width: 500px;
   margin: 0 auto;
 }
 
